--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -159,7 +159,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: upload-checksum-64
-        id: upload-checksum
+        id: upload-checksum-64
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
