--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -160,7 +160,7 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: pkg64/${{ env.ARCHIVE_NAME }}.tar.gz
-          asset_name:       ${{ env.ARCHIVE_NAME }}.tar.gz
+          asset_name: pkg64/${{ env.ARCHIVE_NAME }}.tar.gz
           asset_content_type: application/gzip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -170,7 +170,7 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: pkg32/${{ env.ARCHIVE_NAME }}.tar.gz
-          asset_name:       ${{ env.ARCHIVE_NAME }}.tar.gz
+          asset_name: pkg32/${{ env.ARCHIVE_NAME }}.tar.gz
           asset_content_type: application/gzip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -181,7 +181,7 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: pkg64/${{ env.ARCHIVE_NAME }}.sha256
-          asset_name:       ${{ env.ARCHIVE_NAME }}.sha256
+          asset_name: pkg64/${{ env.ARCHIVE_NAME }}.sha256
           asset_content_type: text/plain
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -191,7 +191,7 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: pkg32/${{ env.ARCHIVE_NAME }}.sha256
-          asset_name:       ${{ env.ARCHIVE_NAME }}.sha256
+          asset_name: pkg32/${{ env.ARCHIVE_NAME }}.sha256
           asset_content_type: text/plain
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -199,7 +199,7 @@ jobs:
       - name: discord-webhook
         uses: tsickert/discord-webhook@v5.3.0
         with:
-          webhook-url: https://discord.com/api/webhooks/1079482264326508644/G1kMGmJ7tNnOgc5fbQIZAMAvRc8moOR3XjWEopDrPlYo4bRwwVN4Eq-Hb2I97ZTn_xLZ
+          webhook-url: ${{ secrets.WEBHOOK_URL }}
           content: "Test"
             
       - if: failure() 
